typescript post 추가

--- a/_posts/2021-08-03-2일차 스터디.md
+++ b/_posts/2021-08-03-2일차 스터디.md
@@ -1,9 +1,9 @@
 ---
-title: 2일차 스터디
+title: 2일차 스터디 - React Basic 1
 tags: [JavaScript, React]
 style:
 color: primary
-description: React 기초 스터디
+description: React 기초 스터디 1
 ---
 
 # React Basic
@@ -146,4 +146,4 @@ Application 주위에 선언적이고 액세스 가능한 탐색을 제공합니
     1. src/components: Component 만 생성
     2. src/screens: Router로 보여지는 Component만 생성
 
-![ezgif.com-gif-maker.gif](/assets/ezgif.com-gif-maker.gif)
+![ezgif.com-gif-maker.gif](/assets/images/study/ezgif.com-gif-maker.gif)
