--- a/_posts/2021-08-04-3일차 스터디.md
+++ b/_posts/2021-08-04-3일차 스터디.md
@@ -1,6 +1,6 @@
 ---
-title: 3일차 스터디
-tags: [JavaScript, React, Styled Component, Axios, PropTypes]
+title: 3일차 스터디 - Styled Components
+tags: [JavaScript, React, Styled Components, Axios, PropTypes]
 style:
 color: primary
 description: React 기초 스터디
@@ -306,4 +306,4 @@ export default HomePresenter;
    2. exchages: /exchanges
    3. coins: /coins
 
-![3day.gif](/assets/3day.gif)
+![3day.gif](/assets/images/study/3day.gif)
