--- a/_posts/2021-08-05-4일차 스터디.md
+++ b/_posts/2021-08-05-4일차 스터디.md
@@ -1,9 +1,9 @@
 ---
-title: 4일차 스터디
+title: 4일차 스터디 - React Basic 2
 tags: [JavaScript, React Router, React]
 style:
 color: primary
-description: React 기초 스터디
+description: React 기초 스터디 2
 ---
 # 스터디
 
@@ -94,20 +94,20 @@ Route를 통해 render된 컴포넌트안에 또 Route가 있는것을 뜻합니
 4. 3개의 url 모두 Coin Component가 렌더링되며 url에따라 Coin, CoinMarkets, CoinExchanges 를 보여주게 됩니다.
 
 
-![4-1.gif](/assets/4-1.gif)
-![4-2.png](/assets/4-2.png)
+![4-1.gif](/assets/images/study/4-1.gif)
+![4-2.png](/assets/images/study/4-2.png)
 
 클릭 하면
 코인 상세보기 페이지 로 이동
-![4-3.png](/assets/4-3.png)
+![4-3.png](/assets/images/study/4-3.png)
 
 아래 MARKETS, EXCHANGES 클릭하면 탭 전환 (중첩 라우터로 구현)
 
 URL
 MARKETS ⇒ /coins/:id/markets
 EXCHANGES ⇒ /coins/:id/exchanges
-![4-4.png](/assets/4-4.png)
-![4-5.png](/assets/4-5.png)
+![4-4.png](/assets/images/study/4-4.png)
+![4-5.png](/assets/images/study/4-5.png)
 
 ## API URL
 
