--- a/_posts/2021-08-09-SCSS.md
+++ b/_posts/2021-08-09-SCSS.md
@@ -3,7 +3,7 @@ title: SCSS 파헤치기
 tags: [CSS, SCSS]
 style:
 color: secondary
-description: React Lifecycle and React Hook
+description:  Learn CSS Preprocessor "SCSS"
 ---
 
 # CSS Preprocessor 란?
