--- a/_posts/2021-08-10-7일차 스터디.md
+++ b/_posts/2021-08-10-7일차 스터디.md
@@ -6,7 +6,7 @@ color: primary
 description: TypeScript Essential
 ---
 
-# TypeScript Essential 1
+# TypeScript Essential
 
 ## TypeScript란?
 TypeScript는 정적 타입 검사자(A Static Type Checker)입니다.
@@ -89,6 +89,16 @@ TypeScript에서, 인터페이스는 이런 타입들의 이름을 짓는 역할
 
 ## Infinite Scroll 구현
 인스타그램, 페이스북 등 스크롤에 반응하여 무한으로 데이터를 불러오게 하는 기능입니다.
+1. Custom React Hook을 구현해야 합니다.
+2. API
+    - URL: https://yts.mx/api/v2/list_movies.json
+    - Params
+      - page: currentPage
+      - limit: 한 페이지당 불러올 데이터 개수
+3. 구현하는데 있어 정답이 있지는 않습니다. 오히려 많은 방법들이 있으니 구글링을 적극 활용하여 구현해 주시면 됩니다.
+4. 버그는 없어야 하며 중복데이터를 제거해야 합니다.
+5. 라이브러리는 사용하지 말고(Hook 제외) 직접 구현하셔야 합니다! 
+
 ![7.gif](/assets/images/study/7.gif)
 
 
