9일차 스터디 추가

--- a/_posts/2021-08-06-5일차 스터디.md
+++ b/_posts/2021-08-06-5일차 스터디.md
@@ -416,7 +416,7 @@ function FriendListItem(props) {
   const isOnline = useFriendStatus(props.friend.id);
 
   return (
-    <li style={{ color: isOnline ? 'green' : 'black' }}>
+    <li style={ isOnline ? 'color: green' : 'color: black'}>
       {props.friend.name}
     </li>
   );
